ethereum-helm-repo/templates/tls-ingress-blockapi-www.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blockapi1
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'false'
spec:
  rules:
  - host: www.blockapi.dappbox.io
    http:
      paths:
      - path: /
        backend:
          serviceName: explorer-rest-api
          servicePort: 8081
  initContainers:
    - name: init-wait-blockapi
      image: busybox
      command: ['sh' , '-c', 'until nslookup explorer-rest-api; do echo waiting for blockapi; sleep2; done;']
