ethereum-helm-repo/templates/tls-ingress-blockapi.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blockapi
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'false'
spec:
  rules:
  - host: blockapi.dappbox.io
    http:
      paths:
      - path: /
        backend:
          serviceName: explorer-rest-api
          servicePort: 8081
  initContainers:
    - name: init-wait-rest-api
      image: busybox
      command: ['sh', '-c', 'until nslookup explorer-rest-api; do echo waiting for api; sleep 2; done;']
