ethereum-helm-repo/templates/tls-ingress-www.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: explorer1
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'false'
spec:
  rules:
  - host: www.explorer.dappbox.app
    http:
      paths:
      - path: /
        backend:
          serviceName: explorer-ui
          servicePort: 5000
  initContainers:
    - name: init-explorer-wait
      image: busybox
      command: ['sh', '-c', 'until nslookup explorer-ui; do echo waiting for explorer-ui; sleep 2; done;']
